docs(README): 更新项目介绍和部署说明
- 添加项目 logo 和简介
- 增加 Cloudflare Workers 部署按钮- 提供 Helm 代理项目的链接
- 更新 Worker 入口文件路径

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "cloudflare-docker-proxy"
 compatibility_date = "2023-12-01"
+main = "src/index.js"  # 这是你构建的 Worker 入口文件路径
 
 [dev]
 ip = "0.0.0.0"
